# ScriptingMachine5

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: ExamplesManaged.sln
examples/Example1_BasicUsage/: CMakeLists.txt  Main.cpp  example.runtimeconfig.json
examples/Example1_BasicUsage/ManagedLibrary/: EntryPoint.cs
examples/Example2_PassingData/: CMakeLists.txt  Main.cpp
examples/Example2_PassingData/ManagedLibrary/: EntryPoint.cs
src/: Assembly.cpp  Assembly.hpp  ErrorWriter.cpp  ErrorWriter.hpp  Host.cpp  Host.hpp  Library.cpp  Library.hpp  Utility.hpp
